# lora_trainer_whisper

./: .gitignore  README.md  check.py  compare_infer.py  eval_dataset_ct2.py  eval_dataset_lora.py  infer_lora.py  main.py  make_manifest.py  merge_peft.py  pyproject.toml  setup.sh  test_run_ct2.py  train_whisper_lora.py
