[project]
name = "lora-trainer-whisper"
version = "0.1.0"
description = "Whisper LoRA Training on DGX Grace(ARM64)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "pydub>=0.25.1",
    "pyinstaller>=6.0.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.10.0",
    "torch>=2.9.1",       
    "torchaudio>=2.9.1",  
    "transformers>=4.36.0",
    "faster-whisper>=1.0.0",
    "jiwer>=3.0.0",
    "matplotlib>=3.8.0",
    "datasets>=2.16.0",
    "accelerate>=0.26.0",
    "evaluate>=0.4.0",
    "peft>=0.7.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "bitsandbytes>=0.41.0",
    "ctranslate2>=4.0.0",
    "pandas>=2.0.0",
    "torchcodec",
    "tensorboard>=2.15.0",
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# 2. 패키지 소스 매핑 (수정: 인덱스 이름 변경)
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
# torchcodec은 여전히 Git 소스 사용 (휠 없음)
#torchcodec = { git = "https://github.com/pytorch/torchcodec.git" }

# 3. 빌드 의존성
#[tool.uv.extra-build-dependencies]
#torchcodec = ["torch", "numpy", "pybind11", "cmake", "ninja"]